--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
   web_socket_channel:
   get: 4.6.5
+  get_storage: 2.0.3
   flutter_screenutil: 5.5.2
+  flutter_secure_storage: 5.0.2
   dio: 4.0.6
   flutter_svg: 1.0.3
+  connectivity_plus: 2.3.5
   stomp_dart_client: 0.4.4
+  dropdown_button2: 1.4.0
+  cached_network_image: 3.2.0
+  equatable: 2.0.5
+  intl:
+
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
